k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: redis-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
          - containerPort: 6379
        resources: {}
status: {}
