k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: server
    spec:
      containers:
      - image: mhalkaaf/fiboserver
        name: server
        ports:
          - containerPort: 5000
        resources: {}
status: {}
