k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: worker
    spec:
      containers:
      - image: mhalkaaf/fiboworker
        name: worker
        resources: {}
status: {}
