k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: client-cluster-ip-service
spec:
  ports:
  - name: clientport
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    component: web
  type: ClusterIP
