k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: redis-cluster-ip-service
spec:
  ports:
  - name: redisport
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    component: redis
  type: ClusterIP
