k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: server-cluster-ip-service
spec:
  ports:
  - name: serverport
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    component: server
  type: ClusterIP
